Implemented faster, less safe redirect

--- a/Mobile Wikipedia Redirect.safariextension/global.html
+++ b/Mobile Wikipedia Redirect.safariextension/global.html
@@ -2,26 +2,13 @@
 <meta charset="utf-8">
 <title>URL Rewrite extension</title>
 <script>
-	safari.application.addEventListener('beforeNavigate', setRedirect, true);
-	safari.application.addEventListener('navigate', redirect, true);
-
-	var url = "";
-	var shouldRedirect = false;
-
-	function setRedirect(event) {
-		// alert("url: \n" + event.url + "\n\ntarget url: " + event.target.url);
-		if (event.url.indexOf("https://en.wikipedia.org") == 0) {
-			url = "https://en.m.wikipedia.org" + event.url.slice(24);
-			shouldRedirect = true;
-		} else {
-			url = "";
-			shouldRedirect = false;
-		}
-	}
-
+	safari.application.addEventListener('beforeNavigate', redirect, true);
 	function redirect(event) {
-		if (shouldRedirect) {
-			event.target.url = url;
+		if (event.url.indexOf("https://en.wikipedia.org") == 0) {
+			var newUrl = "https://en.m.wikipedia.org" + event.url.slice(24);
+
+			event.preventDefault();
+			event.target.url = newUrl;
 		}
 	}
 </script>
